name:                eliza
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iagoleal/eliza#readme
license:             GPL-3
license-file:        LICENSE
author:              Iago Leal de Freitas
maintainer:          hello@iagoleal.com
copyright:           2021 Iago Leal de Freitas
category:            Bot
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable eliza
  main-is: Main.hs
  hs-source-dirs:
    app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
     eliza
   , base >= 4.7 && < 5
   , random
   , transformers
   , mtl
   , text
   , bytestring
   , containers
   , vector
   , megaparsec
   , aeson
  default-extensions: OverloadedStrings
  default-language: Haskell2010

library
  exposed-modules:
      Eliza
      CLI
  other-modules:
      Script
  hs-source-dirs:
      src
  build-depends:
     base >= 4.7 && < 5
   , random
   , transformers
   , mtl
   , text
   , bytestring
   , containers
   , vector
   , megaparsec
   , aeson
  default-extensions: OverloadedStrings
  default-language: Haskell2010
